--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -20,6 +20,6 @@
     margin-left: 1rem;
     display: flex;
     flex-direction: column;
-    gap: 0.188rem;
+    /* gap: 0.188rem; */
     color: #13141B;
 }
