--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
 
+:root {
+  --light: #C1EA3E;
+  --light-secondary: #B1E50E;
+  --dark: #13141B;
+  --dark-secondary: #1B1E2D;
+  --blue: #555BD8;
+  --blue-secondary: #A8A7EC;
+
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #13141B;
+  background-color: var(--dark);
   padding: 1.5rem;
   box-sizing: border-box;
   font-family: "Fira Code", monospace;
