--- a/src/components/Profile Card/ProfileCard.module.css
+++ b/src/components/Profile Card/ProfileCard.module.css
@@ -6,18 +6,20 @@
 
 .imgDivContentDiv {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
 }
 
 .img {
-    width: 25%;
-    border-radius: 0.5rem;
+    width: 100%;
+    border-radius: 0.8rem;
 }
 
 .contentDiv {
-    margin-left: 1rem;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     color: var(--dark);
+    margin-top: 1rem;
 }
