--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,13 @@ p {
   font-size: 12px;
 }
 
+.endText {
+  text-align: center;
+  font-size: 0.5rem !important;
+  color: var(--light-secondary);
+  text-decoration: none;
+}
+
 /* Style for the entire scrollbar */
 ::-webkit-scrollbar {
   width: 8px;
