--- a/src/components/Link/Link.module.css
+++ b/src/components/Link/Link.module.css
@@ -14,4 +14,11 @@
     font-weight: 600;
     text-transform: uppercase;
     cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.link:hover {
+    background-color: var(--blue);
 }
