--- a/src/index.css
+++ b/src/index.css
@@ -7,27 +7,41 @@
   --dark-secondary: #1B1E2D;
   --blue: #555BD8;
   --blue-secondary: #A8A7EC;
-
 }
 
 body {
   margin: 0;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--dark);
-  padding: 1.5rem;
   box-sizing: border-box;
   font-family: "Fira Code", monospace;
   font-optical-sizing: auto;
   font-style: normal;
+  display: flex;
+  justify-content: center;
 }
 
 .App {
-  margin: 0 auto;
   max-width: 30rem;
   width: 100%;
+}
+
+.Pages {
+  width: 100%;
+  max-width: 30rem;
+  height: 97vh;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+}
+
+.content-wrapper {
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   gap: 1rem;
 }
 
