v2 (3 diff build app logic with env & scripts)

--- a/src/components/Link/Link.module.css
+++ b/src/components/Link/Link.module.css
@@ -8,7 +8,7 @@
     padding: 1.2rem;
     border-radius: 0.8rem;
     color: var(--dark-secondary);
-    background-color: var(--light-secondary);
+    background-color: var(--white);
     text-decoration: none;
     font-size: large;
     font-weight: 600;
