--- a/src/components/ProfileCard/ProfileCard.module.css
+++ b/src/components/ProfileCard/ProfileCard.module.css
@@ -1,5 +1,5 @@
 .card {
-    background-color: var(--light);
+    background-color: var(--white);
     padding: 1rem;
     border-radius: 0.8rem;
 }
