--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 :root {
   --light-secondary: #B1E50E;
@@ -12,7 +12,7 @@ body {
   padding: 0;
   background-color: var(--dark);
   box-sizing: border-box;
-  font-family: "Fira Code", monospace;
+  font-family: "Lato", serif;
   font-optical-sizing: auto;
   font-style: normal;
   display: flex;
@@ -41,6 +41,7 @@ body {
   flex-direction: column;
   flex-grow: 1;
   gap: 1rem;
+  margin-top: 1rem;
 }
 
 h1,
@@ -66,13 +67,6 @@ h3 {
 
 p {
   font-size: 12px;
-}
-
-.endText {
-  text-align: center;
-  font-size: 0.5rem !important;
-  color: var(--light-secondary);
-  text-decoration: none;
 }
 
 /* Style for the entire scrollbar */
